2009-03-10  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=24493
        [GTK] Misc patches for WebKitWebHistoryItem

        Call deref() on our internal HistoryItem on dispose, as we always
        acquire it with a releaseRef() call to a PassRefPtr, which passes
        ownership.

        * webkit/webkitwebhistoryitem.cpp:
        (_WebKitWebHistoryItemPrivate::webkit_web_history_item_dispose):

2009-03-10  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=24493
        [GTK] Misc patches for WebKitWebHistoryItem

        return foo? foo : NULL == return foo

        * webkit/webkitwebhistoryitem.cpp:
        (WebKit::core):

2009-03-11  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Holger Freyther.

        Gtk] Implement LayoutTestControllerGtk::setPrivateBrowsingEnabled
        https://bugs.webkit.org/show_bug.cgi?id=24487

        Add private browsing option "enable-private-browsing" to WebKitWebSettings.

        * webkit/webkitwebsettings.cpp:
        (_WebKitWebSettingsPrivate::):
        (_WebKitWebSettingsPrivate::webkit_web_settings_class_init):
        (_WebKitWebSettingsPrivate::webkit_web_settings_set_property):
        (_WebKitWebSettingsPrivate::webkit_web_settings_get_property):
        (_WebKitWebSettingsPrivate::webkit_web_settings_copy):
        * webkit/webkitwebview.cpp:

2009-03-11  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Holger Freyther.

        [GTK] BackForward history leak?
        https://bugs.webkit.org/show_bug.cgi?id=19528

        Don't ref the history items when returning the back/forward list
        Added test_webkit_web_history_item_lifetime test case for this.

        * tests/main.c:
        (test_webkit_web_history_item_lifetime):
        (test_webkit_web_back_forward_list_order): Style fix.